manifests/fiber-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fiber
  name: fiber
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: fiber
